Add hard coded data

--- a/src/app/region-detail/region-detail.component.html
+++ b/src/app/region-detail/region-detail.component.html
@@ -4,3 +4,41 @@
   </button>
   <span>{{ region?.name }}</span>
 </md-toolbar>
+<md-list>
+  <md-list-item>
+    <span>Al</span>
+    <span class="fill-remaining-space"></span>
+    <md-icon color="primary">radio_button_checked</md-icon>
+    <md-icon color="primary">radio_button_checked</md-icon>
+    <md-icon>radio_button_unchecked</md-icon>
+    <md-icon>radio_button_unchecked</md-icon>
+    <md-icon>radio_button_unchecked</md-icon>
+  </md-list-item>
+  <md-list-item>
+    <span>Hassel</span>
+    <span class="fill-remaining-space"></span>
+    <md-icon color="primary">radio_button_checked</md-icon>
+    <md-icon color="primary">radio_button_checked</md-icon>
+    <md-icon color="primary">radio_button_checked</md-icon>
+    <md-icon>radio_button_unchecked</md-icon>
+    <md-icon>radio_button_unchecked</md-icon>
+  </md-list-item>
+  <md-list-item>
+    <span>Sälg/vide</span>
+    <span class="fill-remaining-space"></span>
+    <md-icon>radio_button_unchecked</md-icon>
+    <md-icon>radio_button_unchecked</md-icon>
+    <md-icon>radio_button_unchecked</md-icon>
+    <md-icon>radio_button_unchecked</md-icon>
+    <md-icon>radio_button_unchecked</md-icon>
+  </md-list-item>
+  <md-list-item>
+    <span>Alm</span>
+    <span class="fill-remaining-space"></span>
+    <md-icon color="primary">radio_button_checked</md-icon>
+    <md-icon>radio_button_unchecked</md-icon>
+    <md-icon>radio_button_unchecked</md-icon>
+    <md-icon>radio_button_unchecked</md-icon>
+    <md-icon>radio_button_unchecked</md-icon>
+  </md-list-item>
+</md-list>
