--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~@angular/material/core/theming/prebuilt/deeppurple-amber.css';
+
+.fill-remaining-space {
+    flex: 1 1 auto;
+}
