Get regions from AccuWeather

--- a/src/app/region-detail/region-detail.component.html
+++ b/src/app/region-detail/region-detail.component.html
@@ -2,7 +2,7 @@
   <button (click)="goBack()" md-icon-button>
     <md-icon>arrow_back</md-icon>
   </button>
-  <span>{{ region?.name }}</span>
+  <span>{{ region?.LocalizedName }}</span>
 </md-toolbar>
 <md-list>
   <md-list-item>
