--- a/src/app/regions/regions.component.html
+++ b/src/app/regions/regions.component.html
@@ -2,5 +2,5 @@
   Välj din region
 </md-toolbar>
 <md-nav-list>
-  <a md-list-item href="/regions/{{region.id}}" *ngFor="let region of regions"> {{ region.name }} </a>
+  <a md-list-item href="/regions/{{region.ID}}" *ngFor="let region of regions"> {{ region.LocalizedName }} </a>
 </md-nav-list>
