Implement save as favourite functionality

--- a/src/app/region-detail/region-detail.component.html
+++ b/src/app/region-detail/region-detail.component.html
@@ -5,8 +5,8 @@
   <span>{{ region?.LocalizedName }}</span>
   <span class="fill-remaining-space"></span>
   <button (click)="toggleFavourite()" md-icon-button>
-    <md-icon *ngIf="favourite">favorite</md-icon>
-    <md-icon *ngIf="!favourite">favorite_border</md-icon>
+    <md-icon *ngIf="isFavourite">favorite</md-icon>
+    <md-icon *ngIf="!isFavourite">favorite_border</md-icon>
   </button>
 </md-toolbar>
 {{ forecast?.items[0]?.title }}
