Update header text

--- a/src/app/regions/regions.component.html
+++ b/src/app/regions/regions.component.html
@@ -1,5 +1,5 @@
 <md-toolbar color="primary">
-  Välj din region
+  Pollenkontrollen
 </md-toolbar>
 <md-nav-list>
   <md-list-item (click)="onClick(region)" *ngFor="let region of favouriteRegions"> {{ region.LocalizedName }}</md-list-item>
