Add icon on favourites

--- a/src/app/regions/regions.component.html
+++ b/src/app/regions/regions.component.html
@@ -2,7 +2,12 @@
   Pollenkontrollen
 </md-toolbar>
 <md-nav-list>
-  <md-list-item (click)="onClick(region)" *ngFor="let region of favouriteRegions"> {{ region.LocalizedName }}</md-list-item>
+  <md-list-item (click)="onClick(region)" *ngFor="let region of favouriteRegions">
+    <md-icon md-list-icon>favorite</md-icon>
+    {{ region.LocalizedName }}
+  </md-list-item>
   <md-divider *ngIf="favouriteRegions.length"></md-divider>
-  <md-list-item (click)="onClick(region)" *ngFor="let region of regions"> {{ region.LocalizedName }}</md-list-item>  
+  <md-list-item (click)="onClick(region)" *ngFor="let region of regions">
+    {{ region.LocalizedName }}
+  </md-list-item>
 </md-nav-list>
