Add loading indicator to detail page

--- a/src/app/region-detail/region-detail.component.html
+++ b/src/app/region-detail/region-detail.component.html
@@ -9,4 +9,5 @@
     <md-icon *ngIf="!isFavourite">favorite_border</md-icon>
   </button>
 </md-toolbar>
+<md-spinner *ngIf="loading"></md-spinner>
 {{ forecast?.items[0]?.title }}
