--- a/src/app/region-detail/region-detail.component.html
+++ b/src/app/region-detail/region-detail.component.html
@@ -18,6 +18,6 @@
     {{ forecast?.title }}
   </md-list-item>
   <md-list-item>
-    <a href="{{ forecast?.link }}" *ngIf="forecast">Läs hela rapporten på pollenrapporten.se</a>
+    <a href="{{ forecast?.link }}" *ngIf="forecast">Läs hela prognosen på pollenrapporten.se</a>
   </md-list-item>
 </md-list>
