--- a/src/app/region-detail/region-detail.component.css
+++ b/src/app/region-detail/region-detail.component.css
@@ -1,7 +1,10 @@
+mat-card {
+    margin: 5px;
+}
+
 .skeleton {
-    margin: 16px;
     width: 100%;
-    height: 200px; /* change height to see repeat-y behavior */
+    height: 100px; /* change height to see repeat-y behavior */
 
     background-image:
         linear-gradient( 100deg, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.5) 50%, rgba(255, 255, 255, 0) 80% ),
