--- a/src/app/regions/regions.component.html
+++ b/src/app/regions/regions.component.html
@@ -1,17 +1,17 @@
 <mat-toolbar color="primary">
   Pollenkontrollen
   <span class="fill-remaining-space"></span>
-  <button (click)="onMapClick()" mat-icon-button>
+  <button routerLink="map" mat-icon-button>
     <mat-icon>map</mat-icon>
   </button>
 </mat-toolbar>
 <mat-nav-list>
-  <mat-list-item (click)="onClick(region)" *ngFor="let region of favouriteRegions | async">
+  <a mat-list-item routerLink="regions/{{ region.ID }}" *ngFor="let region of favouriteRegions | async">
     <mat-icon mat-list-icon>favorite</mat-icon>
     {{ region.LocalizedName }}
-  </mat-list-item>
+  </a>
   <mat-divider *ngIf="(favouriteRegions | async)?.length"></mat-divider>
-  <mat-list-item (click)="onClick(region)" *ngFor="let region of regions | async">
+  <a mat-list-item routerLink="regions/{{ region.ID }}" *ngFor="let region of regions | async">
     {{ region.LocalizedName }}
-  </mat-list-item>
+  </a>
 </mat-nav-list>
