--- a/src/app/region-map/region-map.component.html
+++ b/src/app/region-map/region-map.component.html
@@ -1,14 +1,15 @@
 <mat-toolbar color="primary">
-  <button (click)="goBack()" mat-icon-button>
+  <button (click)="goBack()"
+          mat-icon-button>
     <mat-icon>arrow_back</mat-icon>
   </button>
   <span>Karta</span>
 </mat-toolbar>
-<agm-map [latitude]="center.latitude" [longitude]="center.longitude" [zoom]="center.zoom">
-  <agm-marker
-    *ngFor="let region of regions | async"
-    [latitude]="region.location.latitude"
-    [longitude]="region.location.longitude"
-    (markerClick)="onMarkerClick(region)"
-  ></agm-marker>
+<agm-map [latitude]="center.latitude"
+         [longitude]="center.longitude"
+         [zoom]="center.zoom">
+  <agm-marker *ngFor="let region of regions | async"
+              [latitude]="region.location.latitude"
+              [longitude]="region.location.longitude"
+              (markerClick)="onMarkerClick(region)"></agm-marker>
 </agm-map>
