--- a/src/app/region-map/region-map.component.html
+++ b/src/app/region-map/region-map.component.html
@@ -7,7 +7,8 @@
 </mat-toolbar>
 <agm-map [latitude]="center.latitude"
          [longitude]="center.longitude"
-         [zoom]="center.zoom">
+         [zoom]="center.zoom"
+         [streetViewControl]="false">
   <agm-marker *ngFor="let region of regions | async"
               [latitude]="region.location.latitude"
               [longitude]="region.location.longitude"
