Change map page title

--- a/src/app/region-map/region-map.component.html
+++ b/src/app/region-map/region-map.component.html
@@ -3,7 +3,7 @@
           mat-icon-button>
     <mat-icon>arrow_back</mat-icon>
   </button>
-  <span>Karta</span>
+  <span>Mätstationer</span>
 </mat-toolbar>
 <agm-map [latitude]="center.latitude"
          [longitude]="center.longitude"
