--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~@angular/material/prebuilt-themes/indigo-pink.css';
 
+:root {
+    --toolbar-height: 56px;
+}
+
+@media screen and (min-width: 600px) {
+    :root {
+        --toolbar-height: 64px;
+    }
+}
+
 .fill-remaining-space {
     flex: 1 1 auto;
 }
