--- a/src/app/region-detail/region-detail.component.html
+++ b/src/app/region-detail/region-detail.component.html
@@ -1,23 +1,29 @@
-<mat-toolbar color="primary">
-  <button (click)="goBack()"
-          mat-icon-button>
-    <mat-icon>arrow_back</mat-icon>
-  </button>
-  <span>{{ region?.LocalizedName }}</span>
-  <span class="fill-remaining-space"></span>
-  <button (click)="toggleFavourite()"
-          mat-icon-button>
-    <mat-icon *ngIf="isFavourite">favorite</mat-icon>
-    <mat-icon *ngIf="!isFavourite">favorite_border</mat-icon>
-  </button>
-</mat-toolbar>
-<mat-card>
-  <mat-card-content>
-    <div class="skeleton"
-         *ngIf="loading"></div>
-    <p>{{ forecast?.pubDate | date:'yyyy-MM-dd' }}</p>
-    <p>{{ forecast?.title }}</p>
-    <a href="{{ forecast?.link }}"
-       *ngIf="forecast">Läs hela prognosen på pollenrapporten.se</a>
-  </mat-card-content>
-</mat-card>
+<header role="banner">
+  <mat-toolbar color="primary">
+    <button (click)="goBack()"
+            mat-icon-button
+            aria-label="back">
+      <mat-icon>arrow_back</mat-icon>
+    </button>
+    <span>{{ region?.LocalizedName }}</span>
+    <span class="fill-remaining-space"></span>
+    <button (click)="toggleFavourite()"
+            mat-icon-button
+            aria-label="Toggle favorite">
+      <mat-icon *ngIf="isFavourite">favorite</mat-icon>
+      <mat-icon *ngIf="!isFavourite">favorite_border</mat-icon>
+    </button>
+  </mat-toolbar>
+</header>
+<main role="main">
+  <mat-card>
+    <mat-card-content>
+      <div class="skeleton"
+           *ngIf="loading"></div>
+      <p>{{ forecast?.pubDate | date:'yyyy-MM-dd' }}</p>
+      <p>{{ forecast?.title }}</p>
+      <a href="{{ forecast?.link }}"
+         *ngIf="forecast">Läs hela prognosen på pollenrapporten.se</a>
+    </mat-card-content>
+  </mat-card>
+</main>
