--- a/src/app/regions/regions.component.html
+++ b/src/app/regions/regions.component.html
@@ -1,16 +1,21 @@
-<mat-toolbar color="primary">
-  Pollenkontrollen
-  <span class="fill-remaining-space"></span>
-  <button routerLink="map"
-          mat-icon-button>
-    <mat-icon>map</mat-icon>
-  </button>
-</mat-toolbar>
-<mat-nav-list>
-  <a mat-list-item
-     routerLink="regions/{{ region.ID }}"
-     *ngFor="let region of regions | async">
-    {{ region.LocalizedName }}&nbsp;
-    <mat-icon *ngIf="isFavorite(region)">favorite</mat-icon>
-  </a>
-</mat-nav-list>
+<header role="banner">
+  <mat-toolbar color="primary">
+    Pollenkontrollen
+    <span class="fill-remaining-space"></span>
+    <button routerLink="map"
+            mat-icon-button
+            aria-label="map">
+      <mat-icon>map</mat-icon>
+    </button>
+  </mat-toolbar>
+</header>
+<main role="main">
+  <mat-nav-list>
+    <a mat-list-item
+       routerLink="regions/{{ region.ID }}"
+       *ngFor="let region of regions | async">
+      {{ region.LocalizedName }}&nbsp;
+      <mat-icon *ngIf="isFavorite(region)">favorite</mat-icon>
+    </a>
+  </mat-nav-list>
+</main>
